# nerdnuggets-rest-api

./: .env.example  .gitignore  APPLE_SIGNIN_SETUP.md  Cargo.toml  README.md
abis/: bounty_contract_abi.json  dao_contract_abi.json  funding_contract_abi.json  prediction_contract_abi.json
backend/database/: Cargo.toml
backend/database/src/: lib.rs
backend/database/src/repository/: bounty_repository.rs  mod.rs  notification_repository.rs  prediction_placement_repository.rs  prediction_repository.rs  project_repository.rs  user_repository.rs  util_repository.rs
backend/database/src/service/: admin_service.rs  bounty_service.rs  mod.rs  notification_service.rs  prediction_placement_service.rs  prediction_service.rs  project_service.rs  token_service.rs  user_service.rs  util_service.rs
backend/jobs/: Cargo.toml
backend/jobs/src/: evm_job.rs  lib.rs  main.rs
backend/libraries/evm/: Cargo.toml
backend/libraries/evm/src/: lib.rs
backend/libraries/index_store/src/: dummy_store.rs  lib.rs
backend/libraries/postgres_macro/: Cargo.toml
backend/libraries/postgres_macro/src/: lib.rs
backend/libraries/third_party_api/: Cargo.toml
backend/libraries/third_party_api/src/: apple_oauth.rs  arweave.rs  google_oauth.rs  lib.rs  nerdbunny_api.rs
backend/libraries/types/: Cargo.toml
backend/libraries/types/src/: analysis_error.rs  lib.rs  research_check.rs  subscription.rs
backend/libraries/types/src/dto/: admin_dto.rs  bounty_dto.rs  mod.rs  prediction_dto.rs  project_dto.rs  token_dto.rs  user_dto.rs  util_dto.rs
backend/libraries/types/src/error/: api_error.rs  db_error.rs  mod.rs  request_error.rs  token_error.rs  upload_err.rs  user_error.rs
backend/libraries/types/src/models/: affiliation.rs  bounty.rs  category.rs  city_list.rs  dao.rs  degree.rs  employments.rs  hashtags.rs  mod.rs  notification.rs  paper.rs  prediction.rs  prediction_placement.rs  project.rs  speech.rs  temp_user.rs  user.rs  user_history.rs  wallpaper.rs
backend/libraries/types/src/response/: api_response.rs
backend/libraries/utils/: Cargo.toml
backend/libraries/utils/src/: commons.rs  constants.rs  env.rs  lib.rs
backend/notification_websockets/: Cargo.toml
backend/notification_websockets/src/: lib.rs  main.rs  pusher.rs  reader.rs
backend/server/: Cargo.toml
backend/server/src/: lib.rs  state.rs
backend/server/src/handler/: admin_handler.rs  auth_handler.rs  bounty_handler.rs  mod.rs  notification_handler.rs  prediction_handler.rs  project_handler.rs  user_handler.rs  util_handler.rs
backend/server/src/middleware/: auth.rs
backend/server/src/routes/: admin.rs  auth.rs  bounty.rs  mod.rs  notification.rs  project.rs  public.rs  user.rs  util.rs
examples/: apple_signin_example.md
migrations/: 20250127000000_add_details_to_dao.down.sql  20250127000000_add_details_to_dao.up.sql  20250130000000_add_predict_result_to_prediction.down.sql  20250130000000_add_predict_result_to_prediction.up.sql  20250612144627_city-list_1.down.sql  20250612144627_city-list_1.up.sql  20250612152251_city-list_2.up.sql  20250612152257_city-list_3.up.sql  20250612152300_city-list_4.up.sql  20250612152303_city-list_5.up.sql  20250612153123_category.down.sql  20250612153123_category.up.sql  20250612154033_user.up.sql  20250618112921_project.down.sql  20250618112921_project.up.sql  20250618112931_team-member.down.sql  20250618112931_team-member.up.sql  20250618112942_project-milestone.down.sql  20250618112942_project-milestone.up.sql  20250620180149_project-editor.down.sql  20250620180149_project-editor.up.sql  20250625205347_project_comment.down.sql  20250625205347_project_comment.up.sql  20250626173240_dao.down.sql  20250626173240_dao.up.sql  20250626173248_dao-vote.down.sql  20250626173248_dao-vote.up.sql  20250626174153_project-add-proposal-id.up.sql  20250702183718_bounty.down.sql  20250702183718_bounty.up.sql  20250702212031_bounty-milestone.down.sql  20250702212031_bounty-milestone.up.sql  20250703162510_bid.down.sql  20250703162510_bid.up.sql  20250703181215_bid-milestone.down.sql  20250703181215_bid-milestone.up.sql  20250704213019_prediction.down.sql  20250704213019_prediction.up.sql  20250706023503_bounty_comment.down.sql  20250706023503_bounty_comment.up.sql  (+46 more)
