[workspace]
members = [
    "backend/database",
    "backend/libraries/index_store",
    "backend/libraries/third_party_api",
    "backend/libraries/types",
    "backend/libraries/utils",
    "backend/server",
    "backend/notification_websockets",
    "backend/libraries/postgres_macro",
    "backend/libraries/evm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.95"
arrs = "0.1.9"
async-channel = "2.3.1"
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"]}
async-trait = "0.1.85"
aws-config = { version = "1.5.13", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.68.0"
aws-sdk-sesv2 = { version = "1.60.0", features = ["test-util"] }
axum = { version = "0.6.3", features = ["headers", "multipart"] }
base64 = "0.22.1"
bcrypt = "0.16.0"
candid = "0.10.12"
chrono = { version = "0.4.39", features = ["serde"] }
clap = "4.5.26"
dotenv = "0.15.0"
email_address = "0.2.9"
ethers = { version = "2.0", features = ["rustls"] }
futures = "0.3.31"
getrandom = { version = "0.2.15", features = ["custom"] }
hex = "0.4.3"
hyper = { version = "1.5.2", features = ["full"] }
ic-agent = "0.39.2"
ic-cdk = "0.17.1"
ic-cdk-timers = "0.11.0"
ic-certification = "3.0.2"
ic-http-certification = "3.0.2"
ic_principal = "0.1.1"
ic-stable-structures = "0.6.7"
ic-utils = "0.39.2"
jsonwebtoken = "9.3.0"
pocket-ic = "6.0.0"
querystring = "1.1.0"
rand = "0.8.5"
rand_core = "0.6.4"
reqwest = { version = "0.12.12", features = ["json"] }
ring = "0.17.8"
rmp-serde = "1.3.0"
rsa = "0.9.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_bytes = "0.11.15"
serde_json = "1.0.138"
serde_with = "3.12.0"
sha2 = "0.10.8"
slog = "2.7.0"
sqlx = { version = "0.8.3", features = [
    "runtime-async-std-native-tls",
    "postgres",
    "chrono",
    "uuid",
    "json",
] }
test-case = "3.3.1"
telegram-auth-rs = "0.1.1"
thiserror = "2.0.11"
time = "0.3.37"
tokio = { version = "1.43.0", features = ["full"] }
tokio-cron-scheduler = "0.13.0"
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
twitter-v2 = "0.1.8"
uuid = { version = "1.12.0", features = ["serde", "v4"] }
url = "2.5.4"
validator = { version = "0.19.0", features = ["derive"] }
web-push = { version = "0.10.2", default-features = false, features = [
    "hyper-client",
] }
