[package]
name = "notification_websockets"
version.workspace = true
edition.workspace = true

[[bin]]
name = "NobleblocksNotificationWebSockets"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
async-channel.workspace = true
database.path = "../database"
dotenv.workspace = true
futures-util = "0.3"
index_store.path = "../libraries/index_store"
serde_json.workspace = true
tokio-tungstenite = "0.19"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
types.path = "../libraries/types"
utils.path = "../libraries/utils"
uuid.workspace = true
